--- a/less/mktg-page.less
+++ b/less/mktg-page.less
@@ -1,5 +1,6 @@
 body {
     max-width: 500px;
+    margin: 0 auto;
     height: 100%;
     background-image: url("../imgs/landing-page-photo.jpg");
     background-repeat: no-repeat;
