--- a/css/index.css
+++ b/css/index.css
@@ -176,6 +176,6 @@ body {
   height: 100%;
   background-image: url("../imgs/landing-page-photo.jpg");
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100% cover;
+  background-position: top;
+  background-size: 150vmax;
 }
