--- a/less/mktg-page.less
+++ b/less/mktg-page.less
@@ -4,6 +4,6 @@ body {
     height: 100%;
     background-image: url("../imgs/landing-page-photo.jpg");
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100% cover;
+    background-position: top;
+    background-size: 150vmax;
 }
