adjusted footer properties

--- a/less/mktg-page.less
+++ b/less/mktg-page.less
@@ -1,9 +1,17 @@
-body {
-    max-width: 500px;
-    margin: 0 auto;
-    height: 100%;
-    background-image: url("../imgs/landing-page-photo.jpg");
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size: 150vmax;
+body{
+    
+    .container {
+        max-width: 500px;
+        height: 1000px;
+        margin: 0 auto;
+        background-image: url("../imgs/landing-page-photo.jpg");
+        background-repeat: no-repeat;
+        background-position: top;
+        background-size: 150vmax;
+    }
+
+    footer{
+        width: 100%;
+        background: tomato;
+    }
 }
