Messed around with the sticky position property to get the menu to move as you scroll... still needs work

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,7 @@
 header {
     width: 100%;
+    position: -webkit-sticky;
+    position: sticky;
     .nav{
         width: 95%;
         margin: 2% auto;
