adjusted the container height. and adjusted the background position to top

--- a/less/mktg-page.less
+++ b/less/mktg-page.less
@@ -1,7 +1,7 @@
 body{
     background-image: url("../imgs/landing-page-photo.jpg");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top;
     background-size: 180vmax;
 
     .container {
@@ -9,7 +9,7 @@ body{
         margin: 0 auto;
 
         .content {
-            height: 80vmax;
+            height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
