Adjusted the navigation menu for desktop browsers

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -11,6 +11,10 @@ header {
 
         #logo{
             width: 30%;
+
+            @media @desktop{
+                width: 15%;
+            }
         }
 
         nav{
@@ -35,6 +39,10 @@ header {
                     filter: opacity(.8);
                 }
             }
+            @media @desktop {
+                width: 15%;
+            }
         }
+    
     }
 }
