--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,5 +1,17 @@
 .desktop-width {
     @media @desktop {
-        width: 100%;
+        width: 90%;
+    }
+}
+
+.desktop2-width {
+    @media @desktop2 {
+        width: 80%;
+    }
+}
+
+.desktop3-width {
+    @media @desktop3 {
+        width: 80%;
     }
 }
