--- a/less/variables.less
+++ b/less/variables.less
@@ -3,4 +3,6 @@
 @footerColor: #2B444B; 
 
 //Responsiveness
-@desktop: ~'(min-width: 1000px)';
+@desktop: ~'(min-width: 900px)';
+@desktop2: ~'(min-width: 1200px)';
+@desktop3: ~'(min-width: 1700px)';
