added in a mixin to meet my MVP

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -15,3 +15,11 @@
         width: 80%;
     }
 }
+
+.flex (@flex, @column, @space, @space2, @align) {
+    display: @flex;
+    flex-direction: @column;
+    justify-content: @space;
+    align-content: @space2;
+    text-align: @align;
+}
