--- a/less/mktg-page.less
+++ b/less/mktg-page.less
@@ -10,11 +10,7 @@ body{
 
         .content {
             height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-content: space-between;
-            text-align: center;
+            .flex (flex, column, space-evenly, space-between, center);
             color: #fff;
 
             .headline {
